--- a/project/src/main/resources/calories_count/files/user_form.fxml
+++ b/project/src/main/resources/calories_count/files/user_form.fxml
@@ -11,7 +11,7 @@
         <Insets top="20" bottom="20" left="20" right="20"/>
     </padding>
 
-    <Label text="Enter Your Information" style="-fx-font-size: 18; -fx-font-weight: bold;" />
+    <Label text="Enter Your Information" style="-fx-font-size: 18;" />
 
     <TextField fx:id="nameField" promptText="Name" />
     <TextField fx:id="ageField" promptText="Age" />
