--- a/project/src/main/resources/calories_count/files/primary.fxml
+++ b/project/src/main/resources/calories_count/files/primary.fxml
@@ -10,6 +10,8 @@
       <Label text="Primary View" />
       <Button fx:id="primaryButton" text="Switch to Secondary View" onAction="#switchToSecondary"/>
       <Button text="Go to User Form" onAction="#switchToUserForm" />
+      <Button text="Lookup food items" onAction="#switchToFoodLookup" />
+      <Button text="View Today's Logged Foods" onAction="#openTrackedFoods" />
    </children>
    <padding>
       <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
